// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator it should set horizontal margins 1`] = `
.emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  margin-left: 1rem;
  margin-right: 1rem;
  border-width: 0;
  border-color: rgb(174,178,193);
  border-style: solid;
  border-bottom-width: 2px;
  width: auto;
}

<div
  className="emotion-1"
>
  <hr
    aria-orientation="horizontal"
    className="emotion-0"
    height={null}
    width="auto"
  />
</div>
`;

exports[`Separator it should set responsive horizontal margins 1`] = `
.emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  border-width: 0;
  border-color: rgb(174,178,193);
  border-style: solid;
  border-bottom-width: 2px;
  width: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    margin-left: 2.25rem;
    margin-right: 2.25rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    margin-left: 4.5rem;
    margin-right: 4.5rem;
  }
}

<div
  className="emotion-1"
>
  <hr
    aria-orientation="horizontal"
    className="emotion-0"
    height={null}
    width="auto"
  />
</div>
`;

exports[`Separator it should set responsive vertical margins 1`] = `
.emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  margin-bottom: 0.25rem;
  margin-top: 0.25rem;
  border-width: 0;
  border-color: rgb(174,178,193);
  border-style: solid;
  border-left-width: 2px;
  height: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    margin-bottom: 2.25rem;
    margin-top: 2.25rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    margin-bottom: 4.5rem;
    margin-top: 4.5rem;
  }
}

<div
  className="emotion-1"
>
  <hr
    aria-orientation="vertical"
    className="emotion-0"
    height="auto"
    width={null}
  />
</div>
`;

exports[`Separator it should set vertical margins 1`] = `
.emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: Inter,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.5rem;
  font-weight: 400;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  margin-bottom: 2.25rem;
  margin-top: 2.25rem;
  border-width: 0;
  border-color: rgb(174,178,193);
  border-style: solid;
  border-left-width: 2px;
  height: auto;
}

<div
  className="emotion-1"
>
  <hr
    aria-orientation="vertical"
    className="emotion-0"
    height="auto"
    width={null}
  />
</div>
`;
